src/objects/Unit__c.object
<CustomObject>
    <description>Object used to store Unit Inventory mastered in Yardi on SF.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link leased property units to account and in inventory management</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Inventory_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Inventory Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_Visas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allowed Visas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Area Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_ft__c</fullName>
        <label>Area (ft²)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Class_Name__c</fullName>
        <formula>Unit_Sub_Category__r.Unit_Category__r.Asset_Class__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Park__c</fullName>
        <formula>Building__r.Business_Park__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Park</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Combination__c</fullName>
        <label>Category Combination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Area_ft__c</fullName>
        <label>Common Area (ft²)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connected_Load_KW__c</fullName>
        <label>Connected Load (KW)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooling_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cooling Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cooling_Load_BTU__c</fullName>
        <label>Cooling Load (BTU)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_NonCore__c</fullName>
        <label>Core/NonCore</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Non-Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEWA_Account_No__c</fullName>
        <label>DEWA Account No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEWA_Account__c</fullName>
        <label>DEWA Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEWA_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEWA Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEWA_Premises_No__c</fullName>
        <label>DEWA Premises No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_DEWA_Number__c</fullName>
        <label>DM DEWA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ejari_Reference_Number__c</fullName>
        <externalId>true</externalId>
        <label>Ejari Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Load__c</fullName>
        <label>Electrical Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Empower_Account_No__c</fullName>
        <label>Empower Account No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excel_ID__c</fullName>
        <displayFormat>U-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Excel ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Exclude_Chiller_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Chiller Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Cooling_Charges_Common_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Cooling Charges Common Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Cooling_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Cooling Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_DEWA_Charges_Common_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude DEWA Charges Common Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extract_Air_CFM__c</fullName>
        <label>Extract Air (CFM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCC_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FCC Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_Arabic__c</fullName>
        <label>Floor Arabic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_English__c</fullName>
        <label>Floor English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Name__c</fullName>
        <label>Floor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Number__c</fullName>
        <label>Floor Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Floor</fullName>
                </value>
                <value>
                    <fullName>Second Floor</fullName>
                </value>
                <value>
                    <fullName>Third Floor</fullName>
                </value>
                <value>
                    <fullName>Fourth Floor</fullName>
                </value>
                <value>
                    <fullName>Fifth Floor</fullName>
                </value>
                <value>
                    <fullName>Sixth Floor</fullName>
                </value>
                <value>
                    <fullName>Seventh Floor</fullName>
                </value>
                <value>
                    <fullName>Eight Floor</fullName>
                </value>
                <value>
                    <fullName>Ninth Floor</fullName>
                </value>
                <value>
                    <fullName>Tenth Floor</fullName>
                </value>
                <value>
                    <fullName>Eleventh Floor</fullName>
                </value>
                <value>
                    <fullName>Twelfth Floor</fullName>
                </value>
                <value>
                    <fullName>Thirteenth Floor</fullName>
                </value>
                <value>
                    <fullName>Fourteenth Floor</fullName>
                </value>
                <value>
                    <fullName>Basement Level 1</fullName>
                </value>
                <value>
                    <fullName>Basement Level 2</fullName>
                </value>
                <value>
                    <fullName>Ground Floor</fullName>
                </value>
                <value>
                    <fullName>Mezzanine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floor_Type__c</fullName>
        <label>Floor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>GF</fullName>
                </value>
                <value>
                    <fullName>MF</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GFA_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GFA Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <label>Inventory Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Leasable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Leasable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Beds__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_PMLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non PMLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OC_Autonumber__c</fullName>
        <displayFormat>U-{0000}</displayFormat>
        <label>OC Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Old_Category__c</fullName>
        <label>Old Category</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Unit_Area__c</fullName>
        <label>Old Unit Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Areas_Non_GFA__c</fullName>
        <label>Other Areas(Non GFA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_GFA_Areas__c</fullName>
        <label>Other GFA Areas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Area_ft__c</fullName>
        <label>Parking Area (ft²)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Booking_Date_Soft_Booking__c</fullName>
        <label>Pre-Booking Date-Soft Booking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Booking_Date__c</fullName>
        <label>Pre-Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Booking_Date__c</fullName>
        <label>Soft-Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Soft Booked</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supply_Air_CFM__c</fullName>
        <label>Supply Air (CFM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transactional_Unit__c</fullName>
        <label>Transactional Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sqft</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Bed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitId__c</fullName>
        <label>UnitId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Code_YARDI__c</fullName>
        <externalId>true</externalId>
        <label>Unit Code-YARDI</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Name_Arabic__c</fullName>
        <label>Unit Name Arabic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <label>Unit Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_No_Arabic__c</fullName>
        <label>Unit No Arabic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_No_English__c</fullName>
        <label>Unit No. English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <description>Unit number referenced in multiple places</description>
        <label>Unit No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Sub_Category_Name__c</fullName>
        <label>Unit Sub Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Sub Category</label>
        <referenceTo>Unit_Sub_Category__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Area_ft__c</columns>
        <columns>Unit_Code_YARDI__c</columns>
        <columns>Building__c</columns>
        <columns>Inventory_Status__c</columns>
        <columns>Is_Leasable__c</columns>
        <columns>Unit_Sub_Category__c</columns>
        <columns>Price__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Price_Must_be_Entered</fullName>
        <active>true</active>
        <description>On marking the unit as leasable then the price must be entered.</description>
        <errorConditionFormula>Is_Leasable__c = TRUE &amp;&amp;
 ISBLANK(Price__c)</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Please enter the Unit Price</errorMessage>
    </validationRules>
</CustomObject>